Upgrade to JDK 25 compliance