@@ -130,7 +130,7 @@ public class BatteryRelatrixAlias {
 		for(int i = min; i < max; i++) {
 			fkey = key + String.format(uniqKeyFmt, i);
 			try {
-				Relation dmr = Relatrix.store(alias12, fkey, "Has unit "+alias12, new Long(i));
+				Relation dmr = Relatrix.store(alias12, fkey, "Has unit "+alias12, Long.valueOf(i));
 				++recs;
 				if((System.currentTimeMillis()-tims) > 1000) {
 					System.out.println(alias12+" storing "+recs+" "+dmr);
@@ -157,7 +157,7 @@ public class BatteryRelatrixAlias {
 		for(int i = min; i < max; i++) {
 			fkey = key + String.format(uniqKeyFmt, i);
 			try {
-				Relation dmr = Relatrix.store(alias12, fkey, "Has unit "+alias12, new Long(99999));
+				Relation dmr = Relatrix.store(alias12, fkey, "Has unit "+alias12, Long.valueOf(99999));
 				++recs;
 				System.out.println("SHOULD NOT BE storing "+recs+" "+fkey+" dmr:"+dmr);
 				//if((System.currentTimeMillis()-tims) > 1000) {
@@ -198,7 +198,7 @@ public class BatteryRelatrixAlias {
 					System.out.println("MAP KEY MISMATCH:"+(i)+" Has unit "+alias12+" - "+nex.get(1)+" length:"+nex.length());
 					throw new Exception("MAP KEY MISMATCH:"+(i)+" Has unit "+alias12+" - "+nex.get(1)+" length:"+nex.length());
 				}
-				//Long unit = new Long(i);
+				//Long unit = Long.valueOf(i);
 				//if(!nex[2].equals(unit))
 					//System.out.println("RANGE KEY MISMATCH:"+(i)+" "+i+" - "+nex[2]);
 				++i;
@@ -290,7 +290,7 @@ public class BatteryRelatrixAlias {
 				throw new Exception("DOMAIN KEY MISMATCH:"+(i)+" - "+nex.get(0));
 			if(!((Relation)nex.get(0)).getMap().equals("Has unit "+alias12))
 				throw new Exception("MAP KEY MISMATCH:"+(i)+" Has unit "+alias12+" - "+nex.get(0));
-			//Long unit = new Long(i);
+			//Long unit = Long.valueOf(i);
 			//if(!((Relation)nex[0]).getRange().equals(unit))
 				//System.out.println("RANGE KEY MISMATCH:"+(i)+" "+i+" - "+nex[0]);
 			++i;
@@ -328,7 +328,7 @@ public class BatteryRelatrixAlias {
 				throw new Exception("DOMAIN KEY MISMATCH:"+(i)+" "+skey+" - "+nex.get(0));
 			if(!((Relation)nex.get(0)).getMap().equals("Has unit "+alias12))
 				throw new Exception("MAP KEY MISMATCH:"+(i)+" Has unit "+alias12+" - "+nex.get(0));
-			//Long unit = new Long(i);
+			//Long unit = Long.valueOf(i);
 			//if(!((Relation)nex[0]).getRange().equals(unit))
 			//	System.out.println("RANGE KEY MISMATCH:"+(i)+" "+i+" - "+nex[0]);
 			++i;
@@ -340,7 +340,7 @@ public class BatteryRelatrixAlias {
 		System.out.println("BATTERY1AR10 SUCCESS in "+(System.currentTimeMillis()-tims)+" ms.");
 	}
 	/**
-	 * Iterator<?> its = Relatrix.findSet(alias, fkey, "Has unit", new Long(max));
+	 * Iterator<?> its = Relatrix.findSet(alias, fkey, "Has unit", Long.valueOf(max));
 	 * Range value is max, so zero keys should be retrieved since we insert 0 to max-1
 	 * @param argv
 	 * @param alias12 
@@ -351,7 +351,7 @@ public class BatteryRelatrixAlias {
 		long tims = System.currentTimeMillis();
 		String fkey = key + String.format(uniqKeyFmt, max);
 		// Range value is max, so zero keys should be retrieved since we insert 0 to max-1
-		Iterator<?> its = Relatrix.findSet(alias12, fkey, "Has unit "+alias12, new Long(max));
+		Iterator<?> its = Relatrix.findSet(alias12, fkey, "Has unit "+alias12, Long.valueOf(max));
 		System.out.println(alias12+" Battery1AR101 findSet in "+(System.currentTimeMillis()-tims)+" ms.");
 		while(its.hasNext()) {
 			// In this case, the set of identities of type Long that have stated domain and map should be returned
@@ -365,7 +365,7 @@ public class BatteryRelatrixAlias {
 				throw new Exception("DOMAIN KEY MISMATCH:"+(i)+" "+key+" - "+nex.get(0));
 			if(!((Relation)nex.get(0)).getMap().equals("Has unit "+alias12))
 				throw new Exception("MAP KEY MISMATCH:"+(i)+" Has unit "+alias12+" - "+nex.get(0));
-			//Long unit = new Long(i);
+			//Long unit = Long.valueOf(i);
 			//if(!((Relation)nex[0]).getRange().equals(unit))
 				//System.out.println("RANGE KEY MISMATCH:"+(i)+" "+i+" - "+nex[0]);
 			++i;
@@ -418,7 +418,7 @@ public class BatteryRelatrixAlias {
 			throw new Exception("BATTERY1AR12 failed to delete key "+fkey+" "+(Result)its.next());
 		}
 		// re-insert
-		Relatrix.store(alias12, fkey, "Has unit "+alias12, new Long(min));
+		Relatrix.store(alias12, fkey, "Has unit "+alias12, Long.valueOf(min));
 		its = Relatrix.findSet(alias12, '*', fkey, '*');
 		if(its.hasNext()) {
 			throw new Exception("BATTERY1AR12-2 failed to delete key "+fkey);
