@@ -135,7 +135,7 @@ public class BatteryRelatrixStreamAlias {
 		for(int i = min; i < max; i++) {
 			fkey = key + String.format(uniqKeyFmt, i);
 			try {
-				Relatrix.store(alias12, fkey, "Has unit "+alias12, new Long(i));
+				Relatrix.store(alias12, fkey, "Has unit "+alias12, Long.valueOf(i));
 				++recs;
 				if((System.currentTimeMillis()-tims) > 1000) {
 					System.out.println("storing "+recs+" "+fkey);
@@ -162,7 +162,7 @@ public class BatteryRelatrixStreamAlias {
 		for(int i = min; i < max; i++) {
 			fkey = key + String.format(uniqKeyFmt, i);
 			try {
-				Relation dmr = Relatrix.store(alias12, fkey, "Has unit "+alias12, new Long(99999));
+				Relation dmr = Relatrix.store(alias12, fkey, "Has unit "+alias12, Long.valueOf(99999));
 				++recs;
 				System.out.println("SHOULD NOT BE storing "+recs+" "+fkey+" dmr:"+dmr);
 				//if((System.currentTimeMillis()-tims) > 1000) {
@@ -327,7 +327,7 @@ public class BatteryRelatrixStreamAlias {
 	}
 	/**
 	 * Negative assertion test
-	 * Relatrix.findStream(fkey, "Has unit", new Long(max));
+	 * Relatrix.findStream(fkey, "Has unit", Long.valueOf(max));
 	 * Range value is max, so zero keys should be retrieved since we insert 0 to max-1
 	 * @param argv
 	 * @param alias12 
@@ -339,7 +339,7 @@ public class BatteryRelatrixStreamAlias {
 		System.out.println(alias12+" Battery1AR101");
 		String fkey = key + String.format(uniqKeyFmt, max);
 		// Range value is max, so zero keys should be retrieved since we insert 0 to max-1
-		Relatrix.findStream(alias12, fkey, "Has unit "+alias12, new Long(max)).forEach(e->{
+		Relatrix.findStream(alias12, fkey, "Has unit "+alias12, Long.valueOf(max)).forEach(e->{
 			// In this case, the set of identities of type Long that have stated domain and map should be returned
 			// since we supply a fixed domain and map object with a wildcard range, we should get one element back; the identity
 			Result nex = (Result) e;
@@ -352,7 +352,7 @@ public class BatteryRelatrixStreamAlias {
 				throw new RuntimeException("DOMAIN KEY MISMATCH:"+(i)+" "+key+" - "+nex.get(0));
 			if(!((Relation)nex.get(0)).getMap().equals("Has unit "+alias12))
 				throw new RuntimeException("MAP KEY MISMATCH:"+(i)+" Has unit "+alias12+" - "+nex.get(0));
-			//Long unit = new Long(i);
+			//Long unit = Long.valueOf(i);
 			//if(!((Relation)nex[0]).getRange().equals(unit))
 				//System.out.println("RANGE KEY MISMATCH:"+(i)+" "+i+" - "+nex[0]);
 			++i;
