@@ -110,7 +110,7 @@ public class BatteryRelatrixTransaction {
 		for(int i = min; i < max; i++) {
 			fkey = key + String.format(uniqKeyFmt, i);
 			try {
-				RelatrixTransaction.store(xid2, fkey, "Has unit", new Long(i));
+				RelatrixTransaction.store(xid2, fkey, "Has unit", Long.valueOf(i));
 				++recs;
 				if((System.currentTimeMillis()-tims) > 1000) {
 					System.out.println("storing "+recs+" "+fkey);
@@ -139,7 +139,7 @@ public class BatteryRelatrixTransaction {
 		for(int i = min; i < max; i++) {
 			fkey = key + String.format(uniqKeyFmt, i);
 			try {
-				Relation dmr = RelatrixTransaction.store(xid2, fkey, "Has unit", new Long(99999));
+				Relation dmr = RelatrixTransaction.store(xid2, fkey, "Has unit", Long.valueOf(99999));
 				++recs;
 				System.out.println("SHOULD NOT BE storing "+recs+" "+fkey+" dmr:"+dmr);
 				//if((System.currentTimeMillis()-tims) > 1000) {
@@ -178,7 +178,7 @@ public class BatteryRelatrixTransaction {
 				System.out.println("MAP KEY MISMATCH:"+(i)+" Has unit - "+nex.get(1)+" length:"+nex.length());
 				throw new Exception("MAP KEY MISMATCH:"+(i)+" Has unit - "+nex.get(1)+" length:"+nex.length());
 			}
-			//Long unit = new Long(i);
+			//Long unit = Long.valueOf(i);
 			//if(!nex[2].equals(unit))
 			//System.out.println("RANGE KEY MISMATCH:"+(i)+" "+i+" - "+nex[2]);
 			++i;
@@ -270,7 +270,7 @@ public class BatteryRelatrixTransaction {
 				throw new Exception("DOMAIN KEY MISMATCH:"+(i)+" - "+nex.get(0));
 			if(!((Relation)nex.get(0)).getMap().equals("Has unit"))
 				throw new Exception("MAP KEY MISMATCH:"+(i)+" Has unit - "+nex.get(0));
-			//Long unit = new Long(i);
+			//Long unit = Long.valueOf(i);
 			//if(!((Relation)nex[0]).getRange().equals(unit))
 				//System.out.println("RANGE KEY MISMATCH:"+(i)+" "+i+" - "+nex[0]);
 			++i;
@@ -308,7 +308,7 @@ public class BatteryRelatrixTransaction {
 				throw new Exception("DOMAIN KEY MISMATCH:"+(i)+" "+skey+" - "+nex.get(0));
 			if(!((Relation)nex.get(0)).getMap().equals("Has unit"))
 				throw new Exception("MAP KEY MISMATCH:"+(i)+" Has unit - "+nex.get(0));
-			//Long unit = new Long(i);
+			//Long unit = Long.valueOf(i);
 			//if(!((Relation)nex[0]).getRange().equals(unit))
 			//	System.out.println("RANGE KEY MISMATCH:"+(i)+" "+i+" - "+nex[0]);
 			++i;
@@ -320,7 +320,7 @@ public class BatteryRelatrixTransaction {
 		System.out.println("BATTERY1AR10 SUCCESS in "+(System.currentTimeMillis()-tims)+" ms.");
 	}
 	/**
-	 * Iterator<?> its = Relatrix.findSet(fkey, "Has unit", new Long(max));
+	 * Iterator<?> its = Relatrix.findSet(fkey, "Has unit", Long.valueOf(max));
 	 * Range value is max, so zero keys should be retrieved since we insert 0 to max-1
 	 * @param argv
 	 * @param xid2 
@@ -331,7 +331,7 @@ public class BatteryRelatrixTransaction {
 		long tims = System.currentTimeMillis();
 		String fkey = key + String.format(uniqKeyFmt, max);
 		// Range value is max, so zero keys should be retrieved since we insert 0 to max-1
-		Iterator<?> its = RelatrixTransaction.findSet(xid2, fkey, "Has unit", new Long(max));
+		Iterator<?> its = RelatrixTransaction.findSet(xid2, fkey, "Has unit", Long.valueOf(max));
 		System.out.println(xid2+" Batteryt1AR101");
 		while(its.hasNext()) {
 			// In this case, the set of identities of type Long that have stated domain and map should be returned
@@ -345,7 +345,7 @@ public class BatteryRelatrixTransaction {
 				throw new Exception("DOMAIN KEY MISMATCH:"+(i)+" "+key+" - "+nex.get(0));
 			if(!((Relation)nex.get(0)).getMap().equals("Has unit"))
 				throw new Exception("MAP KEY MISMATCH:"+(i)+" Has unit - "+nex.get(0));
-			//Long unit = new Long(i);
+			//Long unit = Long.valueOf(i);
 			//if(!((Relation)nex[0]).getRange().equals(unit))
 				//System.out.println("RANGE KEY MISMATCH:"+(i)+" "+i+" - "+nex[0]);
 			++i;
@@ -397,7 +397,7 @@ public class BatteryRelatrixTransaction {
 			throw new Exception("BATTERY1AR12-1 failed to delete key "+fkey+" "+(Result)its.next());
 		}
 		// re-insert
-		RelatrixTransaction.store(xid2, fkey, "Has unit", new Long(min));
+		RelatrixTransaction.store(xid2, fkey, "Has unit", Long.valueOf(min));
 		its = RelatrixTransaction.findSet(xid2, "*", fkey, "*");
 		if(its.hasNext()) {
 			throw new Exception("BATTERY1AR12-2 failed to delete key "+fkey);
