@@ -146,7 +146,7 @@ public class BatteryRelatrixTransactionStreamAlias {
 		for(int i = min; i < max; i++) {
 			fkey = key + String.format(uniqKeyFmt, i);
 			try {
-				RelatrixTransaction.store(alias12, xid2, fkey, "Has unit "+alias12, new Long(i));
+				RelatrixTransaction.store(alias12, xid2, fkey, "Has unit "+alias12, Long.valueOf(i));
 				++recs;
 				if((System.currentTimeMillis()-tims) > 1000) {
 					System.out.println("storing "+recs+" "+fkey);
@@ -176,7 +176,7 @@ public class BatteryRelatrixTransactionStreamAlias {
 		for(int i = min; i < max; i++) {
 			fkey = key + String.format(uniqKeyFmt, i);
 			try {
-				Relation dmr = RelatrixTransaction.store(alias12, xid2, fkey, "Has unit "+alias12, new Long(99999));
+				Relation dmr = RelatrixTransaction.store(alias12, xid2, fkey, "Has unit "+alias12, Long.valueOf(99999));
 				++recs;
 				System.out.println("SHOULD NOT BE storing "+recs+" "+fkey+" dmr:"+dmr);
 				//if((System.currentTimeMillis()-tims) > 1000) {
@@ -348,7 +348,7 @@ public class BatteryRelatrixTransactionStreamAlias {
 		System.out.println("BATTERY1AR10 SUCCESS in "+(System.currentTimeMillis()-tims)+" ms.");
 	}
 	/**
-	 * Iterator<?> its = Relatrix.findSet(fkey, "Has unit", new Long(max));
+	 * Iterator<?> its = Relatrix.findSet(fkey, "Has unit", Long.valueOf(max));
 	 * Range value is max, so zero keys should be retrieved since we insert 0 to max-1
 	 * @param argv
 	 * @param xid2 
@@ -360,9 +360,9 @@ public class BatteryRelatrixTransactionStreamAlias {
 		long tims = System.currentTimeMillis();
 		String fkey = key + String.format(uniqKeyFmt, max);
 		// Range value is max, so zero keys should be retrieved since we insert 0 to max-1
-		Iterator<?> its = RelatrixTransaction.findSet(alias12, xid2, fkey, "Has unit "+alias12, new Long(max));
+		Iterator<?> its = RelatrixTransaction.findSet(alias12, xid2, fkey, "Has unit "+alias12, Long.valueOf(max));
 		System.out.println(xid2+" Batteryt1AR101 "+alias12);
-		RelatrixTransaction.findStream(alias12, xid2, fkey, "Has unit "+alias12, new Long(max)).forEach(e->{
+		RelatrixTransaction.findStream(alias12, xid2, fkey, "Has unit "+alias12, Long.valueOf(max)).forEach(e->{
 			// In this case, the set of identities of type Long that have stated domain and map should be returned
 			// since we supply a instances, we should get one element back; the identity
 			Result nex = (Result) e;
@@ -375,7 +375,7 @@ public class BatteryRelatrixTransactionStreamAlias {
 				throw new RuntimeException("DOMAIN KEY MISMATCH:"+(i)+" "+key+" - "+nex.get(0));
 			if(!((Relation)nex.get(0)).getMap().equals("Has unit "+alias12))
 				throw new RuntimeException("MAP KEY MISMATCH:"+(i)+" Has unit "+alias12+" - "+nex.get(0));
-			//Long unit = new Long(i);
+			//Long unit = Long.valueOf(i);
 			//if(!((Relation)nex[0]).getRange().equals(unit))
 				//System.out.println("RANGE KEY MISMATCH:"+(i)+" "+i+" - "+nex[0]);
 			++i;
@@ -425,7 +425,7 @@ public class BatteryRelatrixTransactionStreamAlias {
 			throw new Exception("BATTERY1AR12-1 failed to delete key "+fkey+" "+(Result)its.next());
 		}
 		// re-insert
-		RelatrixTransaction.store(alias12, xid2, fkey, "Has unit "+alias12, new Long(min));
+		RelatrixTransaction.store(alias12, xid2, fkey, "Has unit "+alias12, Long.valueOf(min));
 		its = RelatrixTransaction.findSet(alias12, xid2, "*", fkey, "*");
 		if(its.hasNext()) {
 			throw new Exception("BATTERY1AR12-2 failed to delete key "+fkey);
