@@ -93,7 +93,7 @@ public class EmbeddedRetrievalBattery4 {
 		for(int i = min; i < max; i++) {
 			fkey = key + String.format(uniqKeyFmt, i);
 			try {
-				dmr = Relatrix.store(fkey, "Has unit", new Long(i));
+				dmr = Relatrix.store(fkey, "Has unit", Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
