@@ -120,7 +120,7 @@ public class EmbeddedRetrievalBatteryAlias4 {
 		for(int i = min; i < max; i++) {
 			fkey = key + String.format(uniqKeyFmt, i);
 			try {
-				dmr = Relatrix.store(alias12, fkey, "Has unit "+alias12, new Long(i));
+				dmr = Relatrix.store(alias12, fkey, "Has unit "+alias12, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
