@@ -100,7 +100,7 @@ public class EmbeddedRetrievalBatteryTransaction4 {
 		for(int i = min; i < max; i++) {
 			fkey = key + String.format(uniqKeyFmt, i);
 			try {
-				dmr = RelatrixTransaction.store(xid2, fkey, "Has unit", new Long(i));
+				dmr = RelatrixTransaction.store(xid2, fkey, "Has unit", Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
