@@ -102,7 +102,7 @@ public class BatteryDBKeyAlias {
 		for(int i = min; i < max; i++) {
 			//try {
 				fkey = DBKey.newKey(alias12, indexTable, i); // puts to index and instance
-				//RelatrixKV.store(fkey, new Long(i));
+				//RelatrixKV.store(fkey, Long.valueOf(i));
 				++recs;
 			//} catch(DuplicateKeyException dke) { ++dupes; }
 		}
