@@ -77,7 +77,7 @@ public class BatteryRelatrixKVStream {
 		for(int i = min; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKV.store(fkey, new Long(i));
+				RelatrixKV.store(fkey, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -436,7 +436,7 @@ public class BatteryRelatrixKVStream {
 		for(int i = min; i < max1; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKV.store(fkey, new Long(i));
+				RelatrixKV.store(fkey, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -446,7 +446,7 @@ public class BatteryRelatrixKVStream {
 		for(int i = max1; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKV.store(fkey, new Long(i));
+				RelatrixKV.store(fkey, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
