@@ -89,7 +89,7 @@ public class BatteryRelatrixKVStreamAlias {
 		for(int i = min; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKV.store(alias1, fkey+alias1, new Long(i));
+				RelatrixKV.store(alias1, fkey+alias1, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -102,7 +102,7 @@ public class BatteryRelatrixKVStreamAlias {
 		for(int i = min; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKV.store(alias2, fkey+alias2, new Long(i));
+				RelatrixKV.store(alias2, fkey+alias2, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -115,7 +115,7 @@ public class BatteryRelatrixKVStreamAlias {
 		for(int i = min; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKV.store(alias3, fkey+alias3, new Long(i));
+				RelatrixKV.store(alias3, fkey+alias3, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -586,9 +586,9 @@ public class BatteryRelatrixKVStreamAlias {
 		for(int i = min; i < max1; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKV.store(alias1, fkey+alias1, new Long(i));
-				RelatrixKV.store(alias2, fkey+alias2, new Long(i));
-				RelatrixKV.store(alias3, fkey+alias3, new Long(i));
+				RelatrixKV.store(alias1, fkey+alias1, Long.valueOf(i));
+				RelatrixKV.store(alias2, fkey+alias2, Long.valueOf(i));
+				RelatrixKV.store(alias3, fkey+alias3, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -598,9 +598,9 @@ public class BatteryRelatrixKVStreamAlias {
 		for(int i = max1; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKV.store(alias1, fkey+alias1, new Long(i));
-				RelatrixKV.store(alias2, fkey+alias2, new Long(i));
-				RelatrixKV.store(alias3, fkey+alias3, new Long(i));
+				RelatrixKV.store(alias1, fkey+alias1, Long.valueOf(i));
+				RelatrixKV.store(alias2, fkey+alias2, Long.valueOf(i));
+				RelatrixKV.store(alias3, fkey+alias3, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
