@@ -81,7 +81,7 @@ public class BatteryRelatrixKVTransaction {
 		for(int i = min; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKVTransaction.store(xid, fkey, new Long(i));
+				RelatrixKVTransaction.store(xid, fkey, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -103,7 +103,7 @@ public class BatteryRelatrixKVTransaction {
 		for(int i = max; i < max*2; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKVTransaction.store(xid2, fkey, new Long(fkey));
+				RelatrixKVTransaction.store(xid2, fkey, Long.valueOf(fkey));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -488,7 +488,7 @@ public class BatteryRelatrixKVTransaction {
 		for(int i = min; i < max1; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKVTransaction.store(xid2, fkey, new Long(i));
+				RelatrixKVTransaction.store(xid2, fkey, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -497,7 +497,7 @@ public class BatteryRelatrixKVTransaction {
 		for(int i = max1; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKVTransaction.store(xid2, fkey, new Long(i));
+				RelatrixKVTransaction.store(xid2, fkey, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
