@@ -97,7 +97,7 @@ public class BatteryRelatrixKVTransactionAlias {
 		for(int i = min; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKVTransaction.store(alias1, xid, fkey+alias1, new Long(i));
+				RelatrixKVTransaction.store(alias1, xid, fkey+alias1, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -110,7 +110,7 @@ public class BatteryRelatrixKVTransactionAlias {
 		for(int i = min; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKVTransaction.store(alias2, xid, fkey+alias2, new Long(i));
+				RelatrixKVTransaction.store(alias2, xid, fkey+alias2, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -123,7 +123,7 @@ public class BatteryRelatrixKVTransactionAlias {
 		for(int i = min; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKVTransaction.store(alias3, xid, fkey+alias3, new Long(i));
+				RelatrixKVTransaction.store(alias3, xid, fkey+alias3, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -577,9 +577,9 @@ public class BatteryRelatrixKVTransactionAlias {
 		for(int i = min; i < max1; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKVTransaction.store(alias1, xid, fkey+alias1, new Long(i));
-				RelatrixKVTransaction.store(alias2, xid, fkey+alias2, new Long(i));
-				RelatrixKVTransaction.store(alias3, xid, fkey+alias3, new Long(i));
+				RelatrixKVTransaction.store(alias1, xid, fkey+alias1, Long.valueOf(i));
+				RelatrixKVTransaction.store(alias2, xid, fkey+alias2, Long.valueOf(i));
+				RelatrixKVTransaction.store(alias3, xid, fkey+alias3, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
@@ -589,9 +589,9 @@ public class BatteryRelatrixKVTransactionAlias {
 		for(int i = max1; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
 			try {
-				RelatrixKVTransaction.store(alias1, xid, fkey+alias1, new Long(i));
-				RelatrixKVTransaction.store(alias2, xid, fkey+alias2, new Long(i));
-				RelatrixKVTransaction.store(alias3, xid, fkey+alias3, new Long(i));
+				RelatrixKVTransaction.store(alias1, xid, fkey+alias1, Long.valueOf(i));
+				RelatrixKVTransaction.store(alias2, xid, fkey+alias2, Long.valueOf(i));
+				RelatrixKVTransaction.store(alias3, xid, fkey+alias3, Long.valueOf(i));
 				++recs;
 			} catch(DuplicateKeyException dke) { ++dupes; }
 		}
